@@ -1,6 +1,8 @@
 Version 3.1.0 To be released
 ============================
-ENH: Format string in TDataGrid columns can now evaluate an expression (Qiang)
+ENH: Format string in classes extending TDataGridColumn can now evaluate an expression (Qiang)
+ENH: Format string in classes extending TListControl can now evaluate an expression (Qiang)
+NEW: TDataValueFormatter class (Qiang)
 
 Version 3.0RC2 April 16, 2006
 =============================
